[package]
name = "rustwtxt"
version = "0.1.5"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"
description = "Library that makes working with twtxt.txt files easier."
documentation = "https://docs.rs/rustwtxt"
repository = "https://github.com/rustwtxt/rustwtxt"
readme = "README.md"
keywords = ["twtxt", "microblogging", "microblog", "tweet"]
categories = ["parsing", "text-processing", "web-programming"]
license = "ISC"

[badges]
travis-ci = { repository = "rustwtxt/rustwtxt", branch = "master" }
codecov = { repository = "rustwtxt/rustwtxt", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
failure = "^0.1.6"
regex = "1"
ureq = "^0.11.3"
