[package]
name = "rustwtxt"
version = "0.1.5"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"
description = "Library that makes working with twtxt.txt files easier."
documentation = "https://docs.rs/rustwtxt"
repository = "https://git.sr.ht/~gbmor/rustwtxt"
readme = "README.md"
keywords = ["twtxt", "microblogging", "microblog", "tweet"]
categories = ["parsing", "text-processing", "web-programming"]
license = "ISC"

[badges]
travis-ci = { repository = "rustwtxt/rustwtxt", branch = "master" }
codecov = { repository = "rustwtxt/rustwtxt", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
chrono = "0.4"
clap = "2.33"
colored = "1"
failure = "^0.1.6"
lazy_static = "1.4"
regex = "1"
reqwest = "0.9"
serde_yaml = "0.8"
ureq = "^0.11.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
debug-assertions = false
overflow-checks = false

[profile.dev]
opt-level = 0
lto = false
debug = true
rpath = false
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false
rpath = false
overflow-checks = false